[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "requests>=2.28.2",
    "tokenizers>=0.13.3",
]

[project]
name = "rwkv-flask"
version = "0.1.0"
description = "simple stateless HTTP server for rwkv.cpp"
authors = [
    {name = "Locria Cyber"},
]
dependencies = [
    "flask>=2.2.3",
    "numpy>=1.24.2",
    "tqdm>=4.65.0",
    "u-msgpack-python>=2.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

# [build-system]
# requires = []
# requires = ["setuptools>=61", "wheel"]
# build-backend = "setuptools.build_meta"
